# fintech-credits

./: .gitignore  COUNTRY_RULES.md  GIT_SETUP.md  README.md  context.md
fintech-api/: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
fintech-api/app/: main.py
fintech-api/app/controllers/: auth_controller.py  bank_provider_controller.py  country_rule_controller.py  credit_request_controller.py  data_controller.py  log_controller.py  test_controller.py  test_data_controller.py
fintech-api/app/core/: config.py  database.py  init_admin_user.py  init_country_rules.py  logging.py
fintech-api/app/models/: country_rule.py  credit_request.py  log_data.py  user.py
fintech-api/app/repositories/: country_rule_repository.py  credit_request_repository.py  log_data_repository.py  user_repository.py
fintech-api/app/services/: auth_service.py  bank_provider_service.py  country_rule_service.py  credit_request_service.py  data_service.py  email_service.py  log_export_service.py  log_service.py  test_data_service.py
fintech-api/app/utils/: document_validator.py  endpoint_mapper.py  valid_documents_examples.py
fintech-api/tests/: conftest.py
fintech-api/tests/unit/controllers/: test_bank_provider_controller.py  test_country_rule_controller.py  test_credit_request_controller.py  test_data_controller.py  test_log_controller.py
fintech-api/tests/unit/repositories/: test_country_rule_repository.py  test_credit_request_repository.py  test_log_data_repository.py
fintech-api/tests/unit/services/: test_bank_provider_service.py  (+5 more)
(+41 files in other folders)
